*** WooCommerce Pushover Integration ***

2020.07.14 1.0.18


2020.05.04 1.0.17
* Fix Send Test Notification
* Verify with WordPress 5.4
* Verify with WooCommerce 4.0

2020.20.18 1.0.16
* Tested with WooCommerce 3.9
* Removed support for WooCommerce 2.x
* Added direct link to edit order page - Thanks @galapogos01
* Fixing formatting and PHPCS Doc
* Moved debug log to WC_Logger

2019.01.29 1.0.15
* Added Phone field for messages
* Added sounds: https://pushover.net/api#sounds

2018.04.04 1.0.14
* Added Slovenian translation
* Added user defined notifications for all messages.

2018.03.08 1.0.13
* Testing with WC 3.3.3 and WordPress 4.9.4
* Update field labels to clarify key vs. token. thanks @jcs!

2017.05.28  1.0.12
* Update for getting product title.

2015.05.16  1.0.11
* Improvement to settings page
* Fix Documentation and plugin links
* Added priority to set message priority ref: https://pushover.net/api#priority

2015.11.16  1.0.10
* Fixed multiple new order sends when PayPal Standard is used

2015.07.31  1.0.9
* Verified WooCommerce 2.4.0 compatibility
* Updated links

2015.02.28   1.0.8
* Added better logging functions.
* Updated branding
* Updated support and docs links

2014.12.10   1.0.7
* WordPress 4.0.1 testing
* Added plugin icon

2014.09.17   1.0.6
* WooCommerce 2.2 compatibility

2014.04.04   1.0.5
* Fixed admin settings page link
* Fixed send test message redirect page
* Fixed text domain

2013.11.21   1.0.4
* Added notification when an order totals $0.

2013.10.19   1.0.3
* Updated branding and links

2013.08.29   1.0.2
* Fixed low and no stock notifications hook.
* Fixed currency symbol - now sending symbol for WooCommerce base currency

2013.02.06   1.0.1
* Fixed fatal error from undefined is_woocommerce_active() function call

2013.01.18   1.0.0
* First Version