@@ -3,11 +3,11 @@
  * Plugin Name: WooCommerce Pushover Integration
  * Plugin URI: https://shopplugins.com/
  * Description: Integrates <a href="https://woocommerce.com" target="_blank" >WooCommerce</a> with the <a href="https://pushover.net/" target="_blank">Pushover</a> notifications app for Android and iOS.
- * Version: 1.0.17
+ * Version: 1.0.18
  * Author: Shop Plugins
  * Author URI: https://shopplugins.com/
  * WC requires at least: 3.0
- * WC tested up to: 4.0
+ * WC tested up to: 4.3
 */
 /**
  * This program is free software; you can redistribute it and/or modify
@@ -88,6 +88,8 @@ add_filter( 'woocommerce_integrations', 'add_pushover_integration' );
 
 /**
  * Plugin page links
+ * @param array $links
+ * @return array
  */
 function wc_pushover_plugin_links( $links ) {
 	$plugin_links = array(
