@@ -1,7 +1,9 @@
 *** WooCommerce Pushover Integration ***
 
 2020.07.14 1.0.18
-
+* Add args to filters.
+* Add PHP doc.
+* Change WC_Pushover::wc_pushover_init() method name to WC_Pushover::maybe_send_test_message() for clarity.
 
 2020.05.04 1.0.17
 * Fix Send Test Notification
